feat: Integrate Yandex.Metrika tracking for enhanced analytics across all language versions

--- a/src/en.index.html
+++ b/src/en.index.html
@@ -11,6 +11,21 @@
 
         gtag('config', 'AW-17780051605');
     </script>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date();
+            for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js?id=106242234', 'ym');
+
+        ym(106242234, 'init', { ssr: true, webvisor: true, clickmap: true, ecommerce: "dataLayer", accurateTrackBounce: true, trackLinks: true });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/106242234" style="position:absolute; left:-9999px;" alt></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Reliable car service in Batumi. Professional diagnostics, chassis repair, engine overhaul, auto electrician. Spare parts sales and ordering, heater repair. Quality guarantee.">
@@ -704,32 +719,41 @@
             <h2 class="toggle" data-for="#full-price" style="margin-top: 30px; cursor: pointer; color: #bf5757; text-decoration: underline;">
                 <span>Show full price list ▼</span>
             </h2>
-            
+
             <div id="full-price" class="hidden">
-                
+
                 <h3>Diagnostics and Inspection</h3>
                 <ul class="list price-list">
-                    <li class="list_item"><span>Complex diagnostics (Chassis + Computer + Inspection)</span><b>120 ₾</b></li>
+                    <li class="list_item"><span>Complex diagnostics (Chassis + Computer + Inspection)</span><b>120
+                            ₾</b></li>
                     <li class="list_item"><span>Chassis diagnostics (Lift inspection)</span><b>30 ₾</b></li>
                     <li class="list_item"><span>Computer diagnostics (Basic)</span><b>30 ₾</b></li>
                     <li class="list_item"><span>In-depth diagnostics and troubleshooting</span><b><span>from</span> 50 ₾<span>/hour</span></b></li>
                     <li class="list_item"><span>Cooling system diagnostics (leaks, CO2)</span><b>30 - 60 ₾</b></li>
                     <li class="list_item"><span>Compression test</span><b>Spark plugs repl. + 10 ₾/cyl</b></li>
-                    <li class="list_item"><span>On-site diagnostics</span><b>50 - 80 ₾</b></li>
+                    <li class="list_item"><span>On-site diagnostics</span><b>50 - 80
+                            ₾</b></li>
                 </ul>
 
                 <h3>Maintenance</h3>
                 <ul class="list price-list">
                     <li class="list_item"><span>Engine oil and filter change</span><b><span>from</span> 40 ₾</b></li>
-                    <li class="list_item"><span>Air filter replacement</span><b>10 - 20 ₾</b></li>
-                    <li class="list_item"><span>Cabin filter replacement</span><b>10 - 30 ₾</b></li>
-                    <li class="list_item"><span>Fuel filter replacement</span><b>30 - 120 ₾</b></li>
+                    <li class="list_item"><span>Air filter replacement</span><b>10 - 20
+                            ₾</b></li>
+                    <li class="list_item"><span>Cabin filter replacement</span><b>10 - 30
+                            ₾</b></li>
+                    <li class="list_item"><span>Fuel filter replacement</span><b>30 - 120
+                            ₾</b></li>
                     <li class="list_item"><span>Automatic transmission fluid change (partial)</span><b>80 - 150 ₾</b></li>
-                    <li class="list_item"><span>Manual transmission / Differential oil change</span><b>40 ₾</b></li>
-                    <li class="list_item"><span>Transfer case oil change</span><b>40 - 60 ₾</b></li>
+                    <li class="list_item"><span>Manual transmission / Differential oil change</span><b>40
+                            ₾</b></li>
+                    <li class="list_item"><span>Transfer case oil change</span><b>40 -
+                            60 ₾</b></li>
                     <li class="list_item"><span>Antifreeze replacement</span><b>80 - 150 ₾</b></li>
-                    <li class="list_item"><span>Brake fluid replacement</span><b>60 - 100 ₾</b></li>
-                    <li class="list_item"><span>Power steering fluid replacement</span><b>60 - 80 ₾</b></li>
+                    <li class="list_item"><span>Brake fluid replacement</span><b>60 - 100
+                            ₾</b></li>
+                    <li class="list_item"><span>Power steering fluid replacement</span><b>60 - 80
+                            ₾</b></li>
                     <li class="list_item"><span>Throttle body cleaning (with adaptation)</span><b><span>from</span> 50 ₾</b></li>
                     <li class="list_item"><span>Radiator cleaning (with removal)</span><b>90 - 280 ₾</b></li>
                 </ul>
@@ -741,36 +765,47 @@
                     <li class="list_item"><span>Cylinder head removal/installation (4-cyl)</span><b><span>from</span> 420 ₾</b></li>
                     <li class="list_item"><span>Engine removal/installation</span><b><span>from</span> 2500 ₾</b></li>
                     <li class="list_item"><span>Turbocharger removal/installation</span><b><span>from</span> 400 ₾</b></li>
-                    <li class="list_item"><span>Turbocharger rebuild (removed)</span><b>300 - 500 ₾</b></li>
+                    <li class="list_item"><span>Turbocharger rebuild (removed)</span><b>300
+                            - 500 ₾</b></li>
                     <li class="list_item"><span>Engine overhaul / defect detection</span><b><span>from</span> 1500 ₾</b></li>
                     <li class="list_item"><span>Valve cover gasket replacement</span><b>60 - 200 ₾</b></li>
-                    <li class="list_item"><span>Engine mounts replacement</span><b>40 - 250 ₾</b></li>
-                    <li class="list_item"><span>Water pump replacement</span><b>80 - 300 ₾</b></li>
-                    <li class="list_item"><span>Drive belt replacement</span><b>50 - 120 ₾</b></li>
+                    <li class="list_item"><span>Engine mounts replacement</span><b>40 -
+                            250 ₾</b></li>
+                    <li class="list_item"><span>Water pump replacement</span><b>80 -
+                            300 ₾</b></li>
+                    <li class="list_item"><span>Drive belt replacement</span><b>50 - 120
+                            ₾</b></li>
                     <li class="list_item"><span>Spark plugs replacement (4-cyl engine)</span><b>60 ₾</b></li>
-                    <li class="list_item"><span>Radiator replacement</span><b>150 - 550 ₾</b></li>
+                    <li class="list_item"><span>Radiator replacement</span><b>150 -
+                            550 ₾</b></li>
                     <li class="list_item"><span>Thermostat replacement</span><b>60 - 300 ₾</b></li>
                 </ul>
 
                 <h3>Suspension and Chassis Repair</h3>
                 <ul class="list price-list">
                     <li class="list_item"><span>Shock absorbers / struts replacement (pc.)</span><b>50 - 120 ₾</b></li>
-                    <li class="list_item"><span>Suspension arm replacement (pc.)</span><b>40 - 80 ₾</b></li>
+                    <li class="list_item"><span>Suspension arm replacement (pc.)</span><b>40 -
+                            80 ₾</b></li>
                     <li class="list_item"><span>Stabilizer links replacement (pair)</span><b>60 ₾</b></li>
-                    <li class="list_item"><span>Steering rack replacement</span><b>250 - 350 ₾</b></li>
+                    <li class="list_item"><span>Steering rack replacement</span><b>250 - 350
+                            ₾</b></li>
                     <li class="list_item"><span>Tie rod and end replacement (side)</span><b>60 - 80 ₾</b></li>
-                    <li class="list_item"><span>Ball joint replacement</span><b>40 - 80 ₾</b></li>
+                    <li class="list_item"><span>Ball joint replacement</span><b>40 - 80 ₾</b>
+                    </li>
                     <li class="list_item"><span>Bushing pressing (on removed arm)</span><b>20 ₾</b></li>
                     <li class="list_item"><span>Wheel bearing / hub replacement</span><b>80 - 240 ₾</b></li>
-                    <li class="list_item"><span>CV joint replacement</span><b>120 - 150 ₾</b></li>
-                    <li class="list_item"><span>Drive shaft removal/installation</span><b>90 - 150 ₾</b></li>
+                    <li class="list_item"><span>CV joint replacement</span><b>120 - 150 ₾</b>
+                    </li>
+                    <li class="list_item"><span>Drive shaft removal/installation</span><b>90
+                            - 150 ₾</b></li>
                     <li class="list_item"><span>Propeller shaft removal/installation</span><b>60 - 150 ₾</b></li>
                     <li class="list_item"><span>Wheel alignment</span><b>50 - 70 ₾</b></li>
                 </ul>
 
                 <h3>Transmission Repair</h3>
                 <ul class="list price-list">
-                    <li class="list_item"><span>Clutch replacement (Manual)</span><b>350 - 700 ₾</b></li>
+                    <li class="list_item"><span>Clutch replacement (Manual)</span><b>350 - 700 ₾</b>
+                    </li>
                     <li class="list_item"><span>Auto transmission/CVT removal/installation</span><b><span>from</span> 600 ₾</b></li>
                 </ul>
 
@@ -796,9 +831,12 @@
                 <h3>Body, Interior and Others</h3>
                 <ul class="list price-list">
                     <li class="list_item"><span>Windshield replacement</span><b><span>from</span> 100 ₾</b></li>
-                    <li class="list_item"><span>Heater core replacement</span><b>250 - 700 ₾</b></li>
-                    <li class="list_item"><span>Bumper removal/installation</span><b>50 - 150 ₾</b></li>
-                    <li class="list_item"><span>Cabin leak search and repair</span><b>100 - 300 ₾</b></li>
+                    <li class="list_item"><span>Heater core replacement</span><b>250 - 700
+                            ₾</b></li>
+                    <li class="list_item"><span>Bumper removal/installation</span><b>50 - 150 ₾</b>
+                    </li>
+                    <li class="list_item"><span>Cabin leak search and repair</span><b>100
+                            - 300 ₾</b></li>
                     <li class="list_item"><span>Interior element disassembly/assembly</span><b><span>from</span> 40 ₾</b></li>
                     <li class="list_item"><span>Locksmith and welding works</span><b>Negotiable</b></li>
                 </ul>
