--- a/src/ka.index.html
+++ b/src/ka.index.html
@@ -11,6 +11,21 @@
 
         gtag('config', 'AW-17780051605');
     </script>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date();
+            for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js?id=106242234', 'ym');
+
+        ym(106242234, 'init', { ssr: true, webvisor: true, clickmap: true, ecommerce: "dataLayer", accurateTrackBounce: true, trackLinks: true });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/106242234" style="position:absolute; left:-9999px;" alt></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="სანდო ავტოსერვისი ბათუმში. პროფესიონალური დიაგნოსტიკა, სავალი ნაწილის შეკეთება, ძრავის კაპიტალური შეკეთება, ავტოელექტრიკოსი. ნაწილების გაყიდვა და შეკვეთა, ღუმელის შეკეთება. ხარისხის გარანტია.">
@@ -704,32 +719,41 @@
             <h2 class="toggle" data-for="#full-price" style="margin-top: 30px; cursor: pointer; color: #bf5757; text-decoration: underline;">
                 <span>სრული ფასების ნახვა ▼</span>
             </h2>
-            
+
             <div id="full-price" class="hidden">
-                
+
                 <h3>დიაგნოსტიკა და დათვალიერება</h3>
                 <ul class="list price-list">
-                    <li class="list_item"><span>კომპლექსური დიაგნოსტიკა (სავალი ნაწილი + კომპიუტერი + დათვალიერება)</span><b>120 ₾</b></li>
+                    <li class="list_item"><span>კომპლექსური დიაგნოსტიკა (სავალი ნაწილი + კომპიუტერი + დათვალიერება)</span><b>120
+                            ₾</b></li>
                     <li class="list_item"><span>სავალი ნაწილის დიაგნოსტიკა (დათვალიერება ამწეზე)</span><b>30 ₾</b></li>
                     <li class="list_item"><span>კომპიუტერული დიაგნოსტიკა (საბაზისო)</span><b>30 ₾</b></li>
                     <li class="list_item"><span>სიღრმისეული დიაგნოსტიკა და გაუმართაობის ძიება</span><b><span>დან</span> 50 ₾<span>/საათი</span></b></li>
                     <li class="list_item"><span>გაგრილების სისტემის დიაგნოსტიკა (გაჟონვაზე, CO2)</span><b>30 - 60 ₾</b></li>
                     <li class="list_item"><span>კომპრესიის გაზომვა</span><b>სანთლების შეცვლა + 10 ₾/ცილ</b></li>
-                    <li class="list_item"><span>გასვლითი დიაგნოსტიკა</span><b>50 - 80 ₾</b></li>
+                    <li class="list_item"><span>გასვლითი დიაგნოსტიკა</span><b>50 - 80
+                            ₾</b></li>
                 </ul>
 
                 <h3>ტექნიკური მომსახურება (ტო)</h3>
                 <ul class="list price-list">
                     <li class="list_item"><span>ძრავში ზეთის და ფილტრის შეცვლა</span><b><span>დან</span> 40 ₾</b></li>
-                    <li class="list_item"><span>ჰაერის ფილტრის შეცვლა</span><b>10 - 20 ₾</b></li>
-                    <li class="list_item"><span>სალონის ფილტრის შეცვლა</span><b>10 - 30 ₾</b></li>
-                    <li class="list_item"><span>საწვავის ფილტრის შეცვლა</span><b>30 - 120 ₾</b></li>
+                    <li class="list_item"><span>ჰაერის ფილტრის შეცვლა</span><b>10 - 20
+                            ₾</b></li>
+                    <li class="list_item"><span>სალონის ფილტრის შეცვლა</span><b>10 - 30
+                            ₾</b></li>
+                    <li class="list_item"><span>საწვავის ფილტრის შეცვლა</span><b>30 - 120
+                            ₾</b></li>
                     <li class="list_item"><span>ზეთის შეცვლა ავტომატურ კოლოფში/CVT (ნაწილობრივი)</span><b>80 - 150 ₾</b></li>
-                    <li class="list_item"><span>ზეთის შეცვლა მექანიკურ კოლოფში / რედუქტორში</span><b>40 ₾</b></li>
-                    <li class="list_item"><span>ზეთის შეცვლა რაზდატკაში</span><b>40 - 60 ₾</b></li>
+                    <li class="list_item"><span>ზეთის შეცვლა მექანიკურ კოლოფში / რედუქტორში</span><b>40
+                            ₾</b></li>
+                    <li class="list_item"><span>ზეთის შეცვლა რაზდატკაში</span><b>40 -
+                            60 ₾</b></li>
                     <li class="list_item"><span>ანტიფრიზის შეცვლა</span><b>80 - 150 ₾</b></li>
-                    <li class="list_item"><span>სამუხრუჭე სითხის შეცვლა</span><b>60 - 100 ₾</b></li>
-                    <li class="list_item"><span>ჰიდრავლიკის სითხის შეცვლა</span><b>60 - 80 ₾</b></li>
+                    <li class="list_item"><span>სამუხრუჭე სითხის შეცვლა</span><b>60 - 100
+                            ₾</b></li>
+                    <li class="list_item"><span>ჰიდრავლიკის სითხის შეცვლა</span><b>60 - 80
+                            ₾</b></li>
                     <li class="list_item"><span>დროსელის გაწმენდა (ადაპტაციით)</span><b><span>დან</span> 50 ₾</b></li>
                     <li class="list_item"><span>რადიატორების გარეცხვა (მოხსნით)</span><b>90 - 280 ₾</b></li>
                 </ul>
@@ -741,36 +765,47 @@
                     <li class="list_item"><span>ცილინდრების ბლოკის თავის (ГБЦ) მოხსნა/დაყენება (4-ცილ)</span><b><span>დან</span> 420 ₾</b></li>
                     <li class="list_item"><span>ძრავის მოხსნა/დაყენება</span><b><span>დან</span> 2500 ₾</b></li>
                     <li class="list_item"><span>ტურბინის მოხსნა/დაყენება</span><b><span>დან</span> 400 ₾</b></li>
-                    <li class="list_item"><span>ტურბინის აღდგენა (მოხსნილზე)</span><b>300 - 500 ₾</b></li>
+                    <li class="list_item"><span>ტურბინის აღდგენა (მოხსნილზე)</span><b>300
+                            - 500 ₾</b></li>
                     <li class="list_item"><span>ძრავის კაპიტალური რემონტი / დეფექტოვკა</span><b><span>დან</span> 1500 ₾</b></li>
                     <li class="list_item"><span>სარქველების თავსახურის პრაკლადკის შეცვლა</span><b>60 - 200 ₾</b></li>
-                    <li class="list_item"><span>ძრავის ბალიშების შეცვლა</span><b>40 - 250 ₾</b></li>
-                    <li class="list_item"><span>წყლის ტუმბოს (პომპის) შეცვლა</span><b>80 - 300 ₾</b></li>
-                    <li class="list_item"><span>ამძრავი ღვედის შეცვლა</span><b>50 - 120 ₾</b></li>
+                    <li class="list_item"><span>ძრავის ბალიშების შეცვლა</span><b>40 -
+                            250 ₾</b></li>
+                    <li class="list_item"><span>წყლის ტუმბოს (პომპის) შეცვლა</span><b>80 -
+                            300 ₾</b></li>
+                    <li class="list_item"><span>ამძრავი ღვედის შეცვლა</span><b>50 - 120
+                            ₾</b></li>
                     <li class="list_item"><span>ანთების სანთლების შეცვლა (4-ცილ. ძრავა)</span><b>60 ₾</b></li>
-                    <li class="list_item"><span>გაგრილების რადიატორის შეცვლა</span><b>150 - 550 ₾</b></li>
+                    <li class="list_item"><span>გაგრილების რადიატორის შეცვლა</span><b>150 -
+                            550 ₾</b></li>
                     <li class="list_item"><span>თერმოსტატის შეცვლა</span><b>60 - 300 ₾</b></li>
                 </ul>
 
                 <h3>სავალი ნაწილის შეკეთება</h3>
                 <ul class="list price-list">
                     <li class="list_item"><span>ამორტიზატორების შეცვლა (ცალი)</span><b>50 - 120 ₾</b></li>
-                    <li class="list_item"><span>სავალი ნაწილის ბერკეტის (გიტარის) შეცვლა (ცალი)</span><b>40 - 80 ₾</b></li>
+                    <li class="list_item"><span>სავალი ნაწილის ბერკეტის (გიტარის) შეცვლა (ცალი)</span><b>40 -
+                            80 ₾</b></li>
                     <li class="list_item"><span>სტაბილიზატორის სტერჟნების შეცვლა (წყვილი)</span><b>60 ₾</b></li>
-                    <li class="list_item"><span>საჭის რეიკის შეცვლა</span><b>250 - 350 ₾</b></li>
+                    <li class="list_item"><span>საჭის რეიკის შეცვლა</span><b>250 - 350
+                            ₾</b></li>
                     <li class="list_item"><span>საჭის წევის და ნაკონეჩნიკის შეცვლა (მხარე)</span><b>60 - 80 ₾</b></li>
-                    <li class="list_item"><span>შარავოის შეცვლა</span><b>40 - 80 ₾</b></li>
+                    <li class="list_item"><span>შარავოის შეცვლა</span><b>40 - 80 ₾</b>
+                    </li>
                     <li class="list_item"><span>საილენტბლოკის გადაპრესვა (მოხსნილ ბერკეტზე)</span><b>20 ₾</b></li>
                     <li class="list_item"><span>სტუპიცის საკისრის / სტუპიცის შეცვლა</span><b>80 - 240 ₾</b></li>
-                    <li class="list_item"><span>ყუმბარის (შრუსის) შეცვლა</span><b>120 - 150 ₾</b></li>
-                    <li class="list_item"><span>ამძრავი ლილვის (პრივოდის) მოხსნა/დაყენება</span><b>90 - 150 ₾</b></li>
+                    <li class="list_item"><span>ყუმბარის (შრუსის) შეცვლა</span><b>120 - 150 ₾</b>
+                    </li>
+                    <li class="list_item"><span>ამძრავი ლილვის (პრივოდის) მოხსნა/დაყენება</span><b>90
+                            - 150 ₾</b></li>
                     <li class="list_item"><span>კარდანის ლილვის მოხსნა/დაყენება</span><b>60 - 150 ₾</b></li>
                     <li class="list_item"><span>თვლების შეყრა (რაზვალი)</span><b>50 - 70 ₾</b></li>
                 </ul>
 
                 <h3>ტრანსმისიის შეკეთება</h3>
                 <ul class="list price-list">
-                    <li class="list_item"><span>გადაბმულობის (ცეპლენიის) შეცვლა (მექანიკა)</span><b>350 - 700 ₾</b></li>
+                    <li class="list_item"><span>გადაბმულობის (ცეპლენიის) შეცვლა (მექანიკა)</span><b>350 - 700 ₾</b>
+                    </li>
                     <li class="list_item"><span>ავტომატური კოლოფის/CVT მოხსნა/დაყენება</span><b><span>დან</span> 600 ₾</b></li>
                 </ul>
 
@@ -796,9 +831,12 @@
                 <h3>ძარა, სალონი და სხვა</h3>
                 <ul class="list price-list">
                     <li class="list_item"><span>საქარე მინის შეცვლა</span><b><span>დან</span> 100 ₾</b></li>
-                    <li class="list_item"><span>ღუმელის (ფეჩის) რადიატორის შეცვლა</span><b>250 - 700 ₾</b></li>
-                    <li class="list_item"><span>ბამპერის მოხსნა/დაყენება</span><b>50 - 150 ₾</b></li>
-                    <li class="list_item"><span>სალონში წყლის ჩასვლის ძიება და აღმოფხვრა</span><b>100 - 300 ₾</b></li>
+                    <li class="list_item"><span>ღუმელის (ფეჩის) რადიატორის შეცვლა</span><b>250 - 700
+                            ₾</b></li>
+                    <li class="list_item"><span>ბამპერის მოხსნა/დაყენება</span><b>50 - 150 ₾</b>
+                    </li>
+                    <li class="list_item"><span>სალონში წყლის ჩასვლის ძიება და აღმოფხვრა</span><b>100
+                            - 300 ₾</b></li>
                     <li class="list_item"><span>სალონის ელემენტების დაშლა/აწყობა</span><b><span>დან</span> 40 ₾</b></li>
                     <li class="list_item"><span>ზეინკალური და სადუღებო სამუშაოები</span><b>შეთანხმებით</b></li>
                 </ul>
