--- a/src/ru.index.html
+++ b/src/ru.index.html
@@ -11,6 +11,21 @@
 
         gtag('config', 'AW-17780051605');
     </script>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date();
+            for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js?id=106242234', 'ym');
+
+        ym(106242234, 'init', { ssr: true, webvisor: true, clickmap: true, ecommerce: "dataLayer", accurateTrackBounce: true, trackLinks: true });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/106242234" style="position:absolute; left:-9999px;" alt></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Надежный автосервис в Батуми. Профессиональная диагностика, ремонт ходовой части, капитальный ремонт двигателя, автоэлектрик. Продажа и подбор запчастей, ремонт печки. Гарантия.">
@@ -704,32 +719,41 @@
             <h2 class="toggle" data-for="#full-price" style="margin-top: 30px; cursor: pointer; color: #bf5757; text-decoration: underline;">
                 <span>Показать полный прайс-лист ▼</span>
             </h2>
-            
+
             <div id="full-price" class="hidden">
-                
+
                 <h3>Диагностика и Осмотр</h3>
                 <ul class="list price-list">
-                    <li class="list_item"><span>Комплексная диагностика (Ходовая + Компьютерная + Осмотр)</span><b>120 ₾</b></li>
+                    <li class="list_item"><span>Комплексная диагностика (Ходовая + Компьютерная + Осмотр)</span><b>120
+                            ₾</b></li>
                     <li class="list_item"><span>Диагностика ходовой части (Осмотр на подъемнике)</span><b>30 ₾</b></li>
                     <li class="list_item"><span>Компьютерная диагностика (базовая)</span><b>30 ₾</b></li>
                     <li class="list_item"><span>Диагностика и поиск неисправности (углубленная)</span><b><span>от</span> 50 ₾<span>/час</span></b></li>
                     <li class="list_item"><span>Диагностика системы охлаждения (на утечки, CO2)</span><b>30 - 60 ₾</b></li>
                     <li class="list_item"><span>Замер компрессии</span><b>Замена свечей + 10 ₾/цил</b></li>
-                    <li class="list_item"><span>Выездная диагностика</span><b>50 - 80 ₾</b></li>
+                    <li class="list_item"><span>Выездная диагностика</span><b>50 - 80
+                            ₾</b></li>
                 </ul>
 
                 <h3>Техническое обслуживание (ТО)</h3>
                 <ul class="list price-list">
                     <li class="list_item"><span>Замена масла и масляного фильтра в ДВС</span><b><span>от</span> 40 ₾</b></li>
-                    <li class="list_item"><span>Замена воздушного фильтра</span><b>10 - 20 ₾</b></li>
-                    <li class="list_item"><span>Замена салонного фильтра</span><b>10 - 30 ₾</b></li>
-                    <li class="list_item"><span>Замена топливного фильтра</span><b>30 - 120 ₾</b></li>
+                    <li class="list_item"><span>Замена воздушного фильтра</span><b>10 - 20
+                            ₾</b></li>
+                    <li class="list_item"><span>Замена салонного фильтра</span><b>10 - 30
+                            ₾</b></li>
+                    <li class="list_item"><span>Замена топливного фильтра</span><b>30 - 120
+                            ₾</b></li>
                     <li class="list_item"><span>Замена масла в АКПП/CVT (частичная)</span><b>80 - 150 ₾</b></li>
-                    <li class="list_item"><span>Замена масла в МКПП / редукторе</span><b>40 ₾</b></li>
-                    <li class="list_item"><span>Замена масла в раздатке</span><b>40 - 60 ₾</b></li>
+                    <li class="list_item"><span>Замена масла в МКПП / редукторе</span><b>40
+                            ₾</b></li>
+                    <li class="list_item"><span>Замена масла в раздатке</span><b>40 -
+                            60 ₾</b></li>
                     <li class="list_item"><span>Замена антифриза</span><b>80 - 150 ₾</b></li>
-                    <li class="list_item"><span>Замена тормозной жидкости</span><b>60 - 100 ₾</b></li>
-                    <li class="list_item"><span>Замена жидкости ГУР</span><b>60 - 80 ₾</b></li>
+                    <li class="list_item"><span>Замена тормозной жидкости</span><b>60 - 100
+                            ₾</b></li>
+                    <li class="list_item"><span>Замена жидкости ГУР</span><b>60 - 80
+                            ₾</b></li>
                     <li class="list_item"><span>Очистка дроссельной заслонки (с адаптацией)</span><b><span>от</span> 50 ₾</b></li>
                     <li class="list_item"><span>Промывка радиаторов (со снятием)</span><b>90 - 280 ₾</b></li>
                 </ul>
@@ -741,36 +765,47 @@
                     <li class="list_item"><span>Снятие/установка ГБЦ (4-цил)</span><b><span>от</span> 420 ₾</b></li>
                     <li class="list_item"><span>Снятие/установка ДВС в сборе</span><b><span>от</span> 2500 ₾</b></li>
                     <li class="list_item"><span>Снятие/установка турбины</span><b><span>от</span> 400 ₾</b></li>
-                    <li class="list_item"><span>Переборка турбины (на снятом)</span><b>300 - 500 ₾</b></li>
+                    <li class="list_item"><span>Переборка турбины (на снятом)</span><b>300
+                            - 500 ₾</b></li>
                     <li class="list_item"><span>Капитальный ремонт / дефектовка ДВС</span><b><span>от</span> 1500 ₾</b></li>
                     <li class="list_item"><span>Замена прокладки клапанной крышки</span><b>60 - 200 ₾</b></li>
-                    <li class="list_item"><span>Замена опор/подушек двигателя</span><b>40 - 250 ₾</b></li>
-                    <li class="list_item"><span>Замена помпы (водяного насоса)</span><b>80 - 300 ₾</b></li>
-                    <li class="list_item"><span>Замена приводного ремня</span><b>50 - 120 ₾</b></li>
+                    <li class="list_item"><span>Замена опор/подушек двигателя</span><b>40 -
+                            250 ₾</b></li>
+                    <li class="list_item"><span>Замена помпы (водяного насоса)</span><b>80 -
+                            300 ₾</b></li>
+                    <li class="list_item"><span>Замена приводного ремня</span><b>50 - 120
+                            ₾</b></li>
                     <li class="list_item"><span>Замена свечей зажигания (4-цил. ДВС)</span><b>60 ₾</b></li>
-                    <li class="list_item"><span>Замена радиатора охлаждения</span><b>150 - 550 ₾</b></li>
+                    <li class="list_item"><span>Замена радиатора охлаждения</span><b>150 -
+                            550 ₾</b></li>
                     <li class="list_item"><span>Замена термостата</span><b>60 - 300 ₾</b></li>
                 </ul>
 
                 <h3>Ремонт подвески и ходовой части</h3>
                 <ul class="list price-list">
                     <li class="list_item"><span>Замена амортизаторов / стоек (шт.)</span><b>50 - 120 ₾</b></li>
-                    <li class="list_item"><span>Замена рычага подвески (шт.)</span><b>40 - 80 ₾</b></li>
+                    <li class="list_item"><span>Замена рычага подвески (шт.)</span><b>40 -
+                            80 ₾</b></li>
                     <li class="list_item"><span>Замена стоек стабилизатора (за пару)</span><b>60 ₾</b></li>
-                    <li class="list_item"><span>Замена рулевой рейки</span><b>250 - 350 ₾</b></li>
+                    <li class="list_item"><span>Замена рулевой рейки</span><b>250 - 350
+                            ₾</b></li>
                     <li class="list_item"><span>Замена рулевой тяги и наконечника (сторона)</span><b>60 - 80 ₾</b></li>
-                    <li class="list_item"><span>Замена шаровой опоры</span><b>40 - 80 ₾</b></li>
+                    <li class="list_item"><span>Замена шаровой опоры</span><b>40 - 80 ₾</b>
+                    </li>
                     <li class="list_item"><span>Перепрессовка сайлентблока (на снятом)</span><b>20 ₾</b></li>
                     <li class="list_item"><span>Замена ступичного подшипника / ступицы</span><b>80 - 240 ₾</b></li>
-                    <li class="list_item"><span>Замена ШРУСа (гранаты)</span><b>120 - 150 ₾</b></li>
-                    <li class="list_item"><span>Снятие/установка приводного вала</span><b>90 - 150 ₾</b></li>
+                    <li class="list_item"><span>Замена ШРУСа (гранаты)</span><b>120 - 150 ₾</b>
+                    </li>
+                    <li class="list_item"><span>Снятие/установка приводного вала</span><b>90
+                            - 150 ₾</b></li>
                     <li class="list_item"><span>Снятие/установка карданного вала</span><b>60 - 150 ₾</b></li>
                     <li class="list_item"><span>Развал-схождение</span><b>50 - 70 ₾</b></li>
                 </ul>
 
                 <h3>Ремонт трансмиссии</h3>
                 <ul class="list price-list">
-                    <li class="list_item"><span>Замена сцепления МКПП</span><b>350 - 700 ₾</b></li>
+                    <li class="list_item"><span>Замена сцепления МКПП</span><b>350 - 700 ₾</b>
+                    </li>
                     <li class="list_item"><span>Снятие/установка АКПП/CVT</span><b><span>от</span> 600 ₾</b></li>
                 </ul>
 
@@ -796,9 +831,12 @@
                 <h3>Кузов, салон и прочее</h3>
                 <ul class="list price-list">
                     <li class="list_item"><span>Замена лобового стекла</span><b><span>от</span> 100 ₾</b></li>
-                    <li class="list_item"><span>Замена радиатора печки</span><b>250 - 700 ₾</b></li>
-                    <li class="list_item"><span>Снятие/установка бампера</span><b>50 - 150 ₾</b></li>
-                    <li class="list_item"><span>Поиск и устранение течи в салоне</span><b>100 - 300 ₾</b></li>
+                    <li class="list_item"><span>Замена радиатора печки</span><b>250 - 700
+                            ₾</b></li>
+                    <li class="list_item"><span>Снятие/установка бампера</span><b>50 - 150 ₾</b>
+                    </li>
+                    <li class="list_item"><span>Поиск и устранение течи в салоне</span><b>100
+                            - 300 ₾</b></li>
                     <li class="list_item"><span>Разбор/сборка элементов салона</span><b><span>от</span> 40 ₾</b></li>
                     <li class="list_item"><span>Слесарные и сварочные работы</span><b>Договорная</b></li>
                 </ul>
