--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
     <meta property="og:description"
         content="Автосервис Georgia Like Auto в Батуми. Ремонт печки, ходовой, двигателя, автоэлектрик. Качественный ремонт авто с гарантией."
         data-attr-t content-t="og_description">
-    <meta property="og:url" content="https://georgialikeauto.com/" data-attr-t content-t="og_url">
+    <meta property="og:url" content="https://sto-batumi.ge/" data-attr-t content-t="og_url">
     <meta property="og:image" content="/src/img/logo.png">
     <meta property="og:locale" content="ru_RU" data-attr-t content-t="og_locale">
 
@@ -61,8 +61,9 @@
     <meta name="geo.placename" content="Batumi">
     <meta name="geo.position" content="41.6256;41.6104">
     <meta name="ICBM" content="41.6256, 41.6104">
+    <meta name="yandex-verification" content="b46cee70ebb65929" />
 
-    <link rel="canonical" href="https://georgialikeauto.com/" data-attr-t href-t="og_url">
+    <link rel="canonical" href="https://sto-batumi.ge/" data-attr-t href-t="og_url">
 
     <title data-t="title">Автосервис</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
